Navigation Bar Added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,3 @@
-<h1>Tri-Angular</h1>
-<div id="button-div">
-  <button
-  type="button"
-  (click)="clickDetection()">
-  Click
-  </button>
+<div class="container">
+  <app-navbar></app-navbar>
 </div>
