--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,23 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300&display=swap');
+
+/* 62.5% = 10px (on most browsers) */
+:root {
+    font-size: 62.5%;
+}
+
+/* Now multiples of 10 can be used with rem and em intutitively. 
+This resets all fonts back to default of 16px */
+body {
+    font-size: 1.6em;
+}
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+html {
+    scroll-behavior: smooth;
+}
