--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,17 @@
-<div class="container">
-  <app-navbar></app-navbar>
+<app-navbar></app-navbar>
+
+<!-- Flexbox to position canvas to the left and display && fields to the right -->
+<div id="content">
+  <div id="left">
+    <app-canvas></app-canvas>
+  </div>
+  
+  <div id="right">
+    <app-display></app-display>
+    <app-fields></app-fields>
+  </div>
 </div>
+
+
+
+
