--- a/src/app/components/canvas/canvas.component.css
+++ b/src/app/components/canvas/canvas.component.css
@@ -1,21 +1,42 @@
+#canvas-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 #canvas {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 87vh;
-    width: 65vw;
-    margin: 1.5vh 1.25vw 1.5vh 1.25vw;
-    padding-left: 1.25vw;
-    padding-right: 1.25vw;
-    padding-top: 1.5vh;
-    padding-bottom: 1.5vh;
+    height: 50rem;
+    width: 70rem;
     border: #808080 0.5rem solid;
     border-radius: 16px;
     background-color: #FFF;
 }
 
-#canvas > svg > polygon {
-    fill: none;
-    stroke: #000;
-    stroke-width: 3px;
+#canvas-svg {
+    display: flex;
+    width: 100%;
+    height: 100%;
+}
+
+.line {
+    stroke-width: 10px;
+}
+
+.vertex {
+    cursor: move;
+}
+
+#A {
+    stroke: red;
+}
+
+#B {
+    stroke: green;
+}
+
+#C {
+    stroke: blue;
 }
