--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -3,6 +3,7 @@ nav {
     justify-content: flex-end;
     align-self: center;
     height: 10vh;
+    max-height: 6rem;
     width: 100%;
     background-color: #FFF;
 }
