--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,7 +4,7 @@
     </svg>
     
     <div id="title">
-        <h1>{{ title }}</h1>
+        <h1>{{ title | uppercase }}</h1>
     </div>
 
     <ul id="nav-ul">
