--- a/src/app/components/fields/fields.component.css
+++ b/src/app/components/fields/fields.component.css
@@ -1,24 +1,31 @@
 #fields {
     display: flex;
     flex-direction: column;
-    align-items: baseline;
     justify-content: center;
-    height: 54vh;
+    height: 470px;
     max-height: 30rem;
     width: 30vw;
-    margin: 1.5vh 1.25vw 1.5vh 1.25vw;
+    margin: 15px 1.25vw 15px 1.25vw;
     padding-left: 1.25vw;
     padding-right: 1.25vw;
     padding-top: 1.5vh;
     padding-bottom: 1.5vh;
-    border: #808080 0.5rem solid;
+    border: #acacac 0.5rem solid;
     border-radius: 16px;
     background-color: #FFF;
+}
+
+h3 {
+    font-family: "Montserrat",'Arial Narrow', Arial, sans-serif;
+    font-size: 2.5rem;
+    text-align: center;
 }
 
 .individual-field {
     display: flex;
     flex-direction: row;
+    align-self: center;
+    width: 10rem;
 }
 
 label {
@@ -27,20 +34,98 @@ label {
 
 .field {
     display: flex;
-    margin-left: 10px;
     background: none;
     border: 0;
     font-family: "Montserrat", Arial, Helvetica, sans-serif;
     font-size: 3rem;
 }
- #a, #al {
+ #a {
      color: red;
+     width: 7rem;
  }
 
- #b, #bl {
+ #b {
      color: green;
+     width: 7rem;
  }
 
- #c, #cl {
+ #c {
      color: blue;
+     width: 7rem;
  }
+
+ .svg-container {
+     display: flex;
+     align-items: center;
+     justify-content: center;
+ }
+
+ .icons-svg {
+     display: flex;
+     width: 25px;
+     height: 25px;
+ }
+
+ #Ai {
+     stroke-width: 1px;
+     stroke: red;
+ }
+
+ #Bi {
+    stroke-width: 1px;
+    stroke: green;
+}
+
+#Ci {
+    stroke-width: 1px;
+    stroke: blue;
+}
+
+@media only screen and (min-width: 1px) and (max-width: 600px) {
+    #fields {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: fit-content;
+        width: 95vw;
+        min-width: fit-content;
+        margin: 5px 1.25vw 5px 1.25vw;
+    }
+
+    h3 {
+        font-size: 1rem;
+        margin-bottom: 5px;
+    }
+
+    .field {
+        font-size: 1.6rem;
+    }
+
+    #a, #b, #c {
+        width: 5rem;
+    }
+}
+
+@media only screen and (min-height: 0px) and (max-height: 600px) {
+    #fields {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        height: 55vh;
+        min-width: fit-content;
+        margin: 5px 1.25vw 5px 1.25vw;
+    }
+
+    h3 {
+        font-size: 1rem;
+        margin-bottom: 5px;
+    }
+
+    .field {
+        font-size: 1.6rem;
+    }
+
+    #a, #b, #c {
+        width: 5rem;
+    }
+}
